[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/GaroaHackerClubeBold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Scoreboard2.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Button-Scoreboard1-Play-Again.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 75
font_data = ExtResource( 1 )

[node name="Scoreboard1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 343.0
margin_top = 16.0
margin_right = 1623.0
margin_bottom = 87.0
rect_scale = Vector2( 0.498624, 0.498624 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 1 )
text = "Scoreboard"
align = 1

[node name="LabelUsernameTitle" type="Label" parent="."]
margin_left = 135.0
margin_top = 65.0
margin_right = 775.0
margin_bottom = 125.0
rect_scale = Vector2( 0.579437, 0.579437 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 2 )
text = "Username"
align = 1

[node name="LabelScoreTitle" type="Label" parent="."]
margin_left = 1049.0
margin_top = 67.0
margin_right = 1321.0
margin_bottom = 127.0
rect_scale = Vector2( 0.481073, 0.481073 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 3 )
text = "Effort"
align = 1

[node name="LabelScoreTitle2" type="Label" parent="."]
margin_left = 725.0
margin_top = 68.0
margin_right = 997.0
margin_bottom = 128.0
rect_scale = Vector2( 0.557043, 0.567712 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 3 )
text = "Score"
align = 1

[node name="LabelUsername" type="Label" parent="."]
margin_left = 2.0
margin_top = 105.0
margin_right = 642.0
margin_bottom = 156.0
rect_pivot_offset = Vector2( 148, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 4 )
text = "[Insert Usernames Here]"
align = 1

[node name="LabelScore" type="Label" parent="."]
margin_left = 1000.0
margin_top = 103.0
margin_right = 1226.0
margin_bottom = 154.0
rect_pivot_offset = Vector2( -850, -14 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelFScore1" type="Label" parent="."]
margin_left = 694.0
margin_top = 105.0
margin_right = 920.0
margin_bottom = 156.0
rect_pivot_offset = Vector2( -544, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelUsername2" type="Label" parent="."]
margin_left = 2.0
margin_top = 135.0
margin_right = 642.0
margin_bottom = 186.0
rect_pivot_offset = Vector2( 148, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 4 )
text = "[Insert Usernames Here]"
align = 1

[node name="LabelScore2" type="Label" parent="."]
margin_left = 1000.0
margin_top = 133.0
margin_right = 1226.0
margin_bottom = 184.0
rect_pivot_offset = Vector2( -850, -14 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelFScore2" type="Label" parent="."]
margin_left = 694.0
margin_top = 135.0
margin_right = 920.0
margin_bottom = 186.0
rect_pivot_offset = Vector2( -544, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelUsername3" type="Label" parent="."]
margin_left = 2.0
margin_top = 160.0
margin_right = 642.0
margin_bottom = 211.0
rect_pivot_offset = Vector2( 148, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 4 )
text = "[Insert Usernames Here]"
align = 1

[node name="LabelScore3" type="Label" parent="."]
margin_left = 1000.0
margin_top = 158.0
margin_right = 1226.0
margin_bottom = 209.0
rect_pivot_offset = Vector2( -850, -14 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelFScore3" type="Label" parent="."]
margin_left = 694.0
margin_top = 160.0
margin_right = 920.0
margin_bottom = 211.0
rect_pivot_offset = Vector2( -544, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelUsername4" type="Label" parent="."]
margin_left = 1.0
margin_top = 185.0
margin_right = 641.0
margin_bottom = 236.0
rect_pivot_offset = Vector2( 148, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 4 )
text = "[Insert Usernames Here]"
align = 1

[node name="LabelScore4" type="Label" parent="."]
margin_left = 999.0
margin_top = 183.0
margin_right = 1225.0
margin_bottom = 234.0
rect_pivot_offset = Vector2( -850, -14 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelFScore4" type="Label" parent="."]
margin_left = 693.0
margin_top = 185.0
margin_right = 919.0
margin_bottom = 236.0
rect_pivot_offset = Vector2( -544, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelUsername5" type="Label" parent="."]
margin_left = 1.0
margin_top = 209.0
margin_right = 641.0
margin_bottom = 260.0
rect_pivot_offset = Vector2( 148, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 4 )
text = "[Insert Usernames Here]"
align = 1

[node name="LabelScore5" type="Label" parent="."]
margin_left = 999.0
margin_top = 207.0
margin_right = 1225.0
margin_bottom = 258.0
rect_pivot_offset = Vector2( -850, -14 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelFScore5" type="Label" parent="."]
margin_left = 693.0
margin_top = 209.0
margin_right = 919.0
margin_bottom = 260.0
rect_pivot_offset = Vector2( -544, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelUsername6" type="Label" parent="."]
margin_left = 1.0
margin_top = 237.0
margin_right = 641.0
margin_bottom = 288.0
rect_pivot_offset = Vector2( 148, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 4 )
text = "[Insert Usernames Here]"
align = 1

[node name="LabelScore6" type="Label" parent="."]
margin_left = 999.0
margin_top = 235.0
margin_right = 1225.0
margin_bottom = 286.0
rect_pivot_offset = Vector2( -850, -14 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelFScore6" type="Label" parent="."]
margin_left = 693.0
margin_top = 237.0
margin_right = 919.0
margin_bottom = 288.0
rect_pivot_offset = Vector2( -544, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelUsername7" type="Label" parent="."]
margin_top = 265.0
margin_right = 640.0
margin_bottom = 316.0
rect_pivot_offset = Vector2( 148, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 4 )
text = "[Insert Usernames Here]"
align = 1

[node name="LabelScore7" type="Label" parent="."]
margin_left = 998.0
margin_top = 263.0
margin_right = 1224.0
margin_bottom = 314.0
rect_pivot_offset = Vector2( -850, -14 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelFScore7" type="Label" parent="."]
margin_left = 692.0
margin_top = 265.0
margin_right = 918.0
margin_bottom = 316.0
rect_pivot_offset = Vector2( -544, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelUsername8" type="Label" parent="."]
margin_top = 293.0
margin_right = 640.0
margin_bottom = 344.0
rect_pivot_offset = Vector2( 148, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 4 )
text = "[Insert Usernames Here]"
align = 1

[node name="LabelScore8" type="Label" parent="."]
margin_left = 998.0
margin_top = 291.0
margin_right = 1224.0
margin_bottom = 342.0
rect_pivot_offset = Vector2( -850, -14 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelFScore8" type="Label" parent="."]
margin_left = 692.0
margin_top = 293.0
margin_right = 918.0
margin_bottom = 344.0
rect_pivot_offset = Vector2( -544, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelUsername9" type="Label" parent="."]
margin_left = -1.0
margin_top = 320.0
margin_right = 639.0
margin_bottom = 371.0
rect_pivot_offset = Vector2( 148, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 4 )
text = "[Insert Usernames Here]"
align = 1

[node name="LabelScore9" type="Label" parent="."]
margin_left = 997.0
margin_top = 318.0
margin_right = 1223.0
margin_bottom = 369.0
rect_pivot_offset = Vector2( -850, -14 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelFScore9" type="Label" parent="."]
margin_left = 691.0
margin_top = 320.0
margin_right = 917.0
margin_bottom = 371.0
rect_pivot_offset = Vector2( -544, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelUsername10" type="Label" parent="."]
margin_top = 345.0
margin_right = 640.0
margin_bottom = 396.0
rect_pivot_offset = Vector2( 148, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 4 )
text = "[Insert Usernames Here]"
align = 1

[node name="LabelScore10" type="Label" parent="."]
margin_left = 998.0
margin_top = 343.0
margin_right = 1224.0
margin_bottom = 394.0
rect_pivot_offset = Vector2( -850, -14 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelFScore10" type="Label" parent="."]
margin_left = 692.0
margin_top = 345.0
margin_right = 918.0
margin_bottom = 396.0
rect_pivot_offset = Vector2( -544, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelUsername11" type="Label" parent="."]
margin_top = 370.0
margin_right = 640.0
margin_bottom = 421.0
rect_pivot_offset = Vector2( 148, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 4 )
text = "[Insert Usernames Here]"
align = 1

[node name="LabelScore11" type="Label" parent="."]
margin_left = 998.0
margin_top = 368.0
margin_right = 1224.0
margin_bottom = 419.0
rect_pivot_offset = Vector2( -850, -14 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelFScore11" type="Label" parent="."]
margin_left = 692.0
margin_top = 370.0
margin_right = 918.0
margin_bottom = 421.0
rect_pivot_offset = Vector2( -544, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelUsername12" type="Label" parent="."]
margin_left = -1.0
margin_top = 392.0
margin_right = 639.0
margin_bottom = 443.0
rect_pivot_offset = Vector2( 148, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 4 )
text = "[Insert Usernames Here]"
align = 1

[node name="LabelScore12" type="Label" parent="."]
margin_left = 997.0
margin_top = 390.0
margin_right = 1223.0
margin_bottom = 441.0
rect_pivot_offset = Vector2( -850, -14 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelFScore12" type="Label" parent="."]
margin_left = 691.0
margin_top = 392.0
margin_right = 917.0
margin_bottom = 443.0
rect_pivot_offset = Vector2( -544, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelUsername13" type="Label" parent="."]
margin_top = 417.0
margin_right = 640.0
margin_bottom = 468.0
rect_pivot_offset = Vector2( 148, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 4 )
text = "[Insert Usernames Here]"
align = 1

[node name="LabelScore13" type="Label" parent="."]
margin_left = 998.0
margin_top = 415.0
margin_right = 1224.0
margin_bottom = 466.0
rect_pivot_offset = Vector2( -850, -14 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelFScore13" type="Label" parent="."]
margin_left = 692.0
margin_top = 417.0
margin_right = 918.0
margin_bottom = 468.0
rect_pivot_offset = Vector2( -544, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelUsername14" type="Label" parent="."]
margin_left = -1.0
margin_top = 443.0
margin_right = 639.0
margin_bottom = 494.0
rect_pivot_offset = Vector2( 148, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 4 )
text = "[Insert Usernames Here]"
align = 1

[node name="LabelScore14" type="Label" parent="."]
margin_left = 997.0
margin_top = 441.0
margin_right = 1223.0
margin_bottom = 492.0
rect_pivot_offset = Vector2( -850, -14 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelFScore14" type="Label" parent="."]
margin_left = 691.0
margin_top = 443.0
margin_right = 917.0
margin_bottom = 494.0
rect_pivot_offset = Vector2( -544, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelUsername15" type="Label" parent="."]
margin_left = -1.0
margin_top = 466.0
margin_right = 639.0
margin_bottom = 517.0
rect_pivot_offset = Vector2( 148, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 4 )
text = "[Insert Usernames Here]"
align = 1

[node name="LabelScore15" type="Label" parent="."]
margin_left = 997.0
margin_top = 464.0
margin_right = 1223.0
margin_bottom = 515.0
rect_pivot_offset = Vector2( -850, -14 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelFScore15" type="Label" parent="."]
margin_left = 691.0
margin_top = 466.0
margin_right = 917.0
margin_bottom = 517.0
rect_pivot_offset = Vector2( -544, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelUsername16" type="Label" parent="."]
margin_left = -2.0
margin_top = 491.0
margin_right = 638.0
margin_bottom = 542.0
rect_pivot_offset = Vector2( 148, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 4 )
text = "[Insert Usernames Here]"
align = 1

[node name="LabelScore16" type="Label" parent="."]
margin_left = 996.0
margin_top = 489.0
margin_right = 1222.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( -850, -14 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelFScore16" type="Label" parent="."]
margin_left = 690.0
margin_top = 491.0
margin_right = 916.0
margin_bottom = 542.0
rect_pivot_offset = Vector2( -544, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelUsername17" type="Label" parent="."]
margin_left = -2.0
margin_top = 516.0
margin_right = 638.0
margin_bottom = 567.0
rect_pivot_offset = Vector2( 148, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 4 )
text = "[Insert Usernames Here]"
align = 1

[node name="LabelScore17" type="Label" parent="."]
margin_left = 996.0
margin_top = 514.0
margin_right = 1222.0
margin_bottom = 565.0
rect_pivot_offset = Vector2( -850, -14 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelFScore17" type="Label" parent="."]
margin_left = 690.0
margin_top = 516.0
margin_right = 916.0
margin_bottom = 567.0
rect_pivot_offset = Vector2( -544, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelUsername18" type="Label" parent="."]
margin_left = -1.0
margin_top = 540.0
margin_right = 639.0
margin_bottom = 591.0
rect_pivot_offset = Vector2( 148, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 4 )
text = "[Insert Usernames Here]"
align = 1

[node name="LabelScore18" type="Label" parent="."]
margin_left = 997.0
margin_top = 538.0
margin_right = 1223.0
margin_bottom = 589.0
rect_pivot_offset = Vector2( -850, -14 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelFScore18" type="Label" parent="."]
margin_left = 691.0
margin_top = 540.0
margin_right = 917.0
margin_bottom = 591.0
rect_pivot_offset = Vector2( -544, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelUsername19" type="Label" parent="."]
margin_left = -1.0
margin_top = 563.0
margin_right = 639.0
margin_bottom = 614.0
rect_pivot_offset = Vector2( 148, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 4 )
text = "[Insert Usernames Here]"
align = 1

[node name="LabelScore19" type="Label" parent="."]
margin_left = 997.0
margin_top = 561.0
margin_right = 1223.0
margin_bottom = 612.0
rect_pivot_offset = Vector2( -850, -14 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelFScore19" type="Label" parent="."]
margin_left = 691.0
margin_top = 563.0
margin_right = 917.0
margin_bottom = 614.0
rect_pivot_offset = Vector2( -544, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelUsername20" type="Label" parent="."]
margin_left = -1.0
margin_top = 588.0
margin_right = 639.0
margin_bottom = 639.0
rect_pivot_offset = Vector2( 148, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 4 )
text = "[Insert Usernames Here]"
align = 1

[node name="LabelScore20" type="Label" parent="."]
margin_left = 997.0
margin_top = 586.0
margin_right = 1223.0
margin_bottom = 637.0
rect_pivot_offset = Vector2( -850, -14 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="LabelFScore20" type="Label" parent="."]
margin_left = 691.0
margin_top = 588.0
margin_right = 917.0
margin_bottom = 639.0
rect_pivot_offset = Vector2( -544, -16 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Q"
align = 1

[node name="Button-Scoreboard1-Play-Again" type="Button" parent="."]
margin_left = 286.0
margin_top = 631.0
margin_right = 1566.0
margin_bottom = 770.0
rect_scale = Vector2( 0.604225, 0.604225 )
custom_colors/font_color = Color( 0.580392, 0.556863, 0.556863, 1 )
custom_colors/font_color_hover = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_colors/font_color_pressed = Color( 0.580392, 0.556863, 0.556863, 1 )
custom_fonts/font = SubResource( 6 )
text = "Play Again"
flat = true
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="Button-Scoreboard1-Play-Again"]
wait_time = 3.0
autostart = true

[node name="HTTPRequest" type="HTTPRequest" parent="Button-Scoreboard1-Play-Again"]

[connection signal="pressed" from="Button-Scoreboard1-Play-Again" to="Button-Scoreboard1-Play-Again" method="_on_ButtonScoreboard1PlayAgain_pressed"]
[connection signal="request_completed" from="Button-Scoreboard1-Play-Again/HTTPRequest" to="Button-Scoreboard1-Play-Again" method="_on_HTTPRequest_request_completed"]
